Updated widget container to have an id of 'hubWidget' instead of a class.

--- a/less/type.less
+++ b/less/type.less
@@ -1,4 +1,4 @@
-.hub-widget {
+#hubWidget {
 	font-family: "Myriad Pro", Myriad, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Verdana, sans-serif;
 	.header {
 		font-size: 20px;
