--- a/less/type.less
+++ b/less/type.less
@@ -1,5 +1,6 @@
 #hubWidget {
 	font-family: "Myriad Pro", Myriad, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Verdana, sans-serif;
+	line-height: 130%;
 	.header {
 		font-size: 20px;
 		font-weight: bold;
@@ -13,6 +14,7 @@
 	.pubdate {
 		font-size: 13px;
 		color: #aaa;
+		font-style: italic;
 	}
 	.hubpower {
 		text-align: right;
