--- a/less/color-dark.less
+++ b/less/color-dark.less
@@ -4,6 +4,12 @@
 	.header {
 		border-bottom: 5px solid #fff;
 	}
+	.content {
+		&.loading {
+			min-height: 20px;
+			background: url("images/loading-dark.gif") top center no-repeat;
+		}
+	}
 	a {
 		color: #fff;
 		&:hover {
@@ -12,5 +18,13 @@
 	}
 	.pubdate {
 		color: #fff;
+	}
+	.hubpower {
+		height: 20px;
+		width: 100%;
+		background: url("images/hubpower-dark.gif") top right no-repeat;
+		span {
+			display: none;
+		}
 	}
 }
