--- a/less/color-dark.less
+++ b/less/color-dark.less
@@ -1,5 +1,5 @@
 #hubWidget {
-	background: #000;
+	background: #222;
 	color: #fff;
 	.header {
 		border-bottom: 5px solid #fff;
@@ -22,7 +22,7 @@
 	.hubpower {
 		height: 20px;
 		width: 100%;
-		background: url("images/hubpower-dark.gif") top right no-repeat;
+		background: url("images/hubpower-dark.png") top right no-repeat;
 		span {
 			display: none;
 		}
