--- a/less/color-light.less
+++ b/less/color-light.less
@@ -22,7 +22,7 @@
 	.hubpower {
 		height: 20px;
 		width: 100%;
-		background: url("images/hubpower-light.gif") top right no-repeat;
+		background: url("images/hubpower-light.png") top right no-repeat;
 		span {
 			display: none;
 		}
