Cleaned up styles, html.

--- a/css/less/type.less
+++ b/css/less/type.less
@@ -5,6 +5,9 @@
 		font-size: 20px;
 		font-weight: bold;
 	}
+	ul {
+		list-style: none;
+	}
 	.headline {
 		font-size: 15px;
 	}
@@ -13,10 +16,11 @@
 	}
 	.pubdate {
 		font-size: 13px;
-		color: #aaa;
 		font-style: italic;
 	}
 	.hubpower {
-		text-align: right;
+		.link {
+			font-size: 13px;
+		}
 	}
 }
