--- a/css/dark.css
+++ b/css/dark.css
@@ -1,49 +1,62 @@
 #hubWidget {
-  background: #222;
-  color: #fff;
+  background: #2b2b2b;
+  color: #eee;
 }
 #hubWidget .header {
-  border-bottom: 5px solid #fff;
+  border-bottom: 5px solid #eee;
 }
 #hubWidget .content.loading {
-  min-height: 20px;
-  background: url("images/loading-dark.gif") top center no-repeat;
+  background: url("../images/loading-dark.gif") top center no-repeat;
 }
 #hubWidget a {
-  color: #fff;
+  color: #eee;
 }
 #hubWidget a:hover {
   color: #9fc3e4;
 }
 #hubWidget .pubdate {
-  color: #fff;
+  color: #bbb;
 }
-#hubWidget .hubpower {
-  height: 20px;
-  width: 100%;
-  background: url("images/hubpower-dark.png") top right no-repeat;
+#hubWidget .hubpower .link a {
+  color: #9fc3e4;
 }
-#hubWidget .hubpower span {
-  display: none;
+#hubWidget .hubpower .link a:hover {
+  color: #aaa;
+}
+#hubWidget .hubpower .image {
+  background: url("../images/hubpower-dark.png") top right no-repeat;
 }
 #hubWidget {
-  padding: 15px;
   width: 250px;
+  padding: 15px;
 }
 #hubWidget .header {
   padding-bottom: 10px;
   margin-bottom: 10px;
 }
+#hubWidget .content.loading {
+  min-height: 20px;
+}
 #hubWidget ul {
-  list-style: none;
   padding: 0;
 }
 #hubWidget ul li {
   margin-bottom: 10px;
 }
 #hubWidget ul p {
-  margin: 0;
   padding: 0;
+  margin: 0;
+}
+#hubWidget .hubpower .link {
+  float: left;
+}
+#hubWidget .hubpower .image {
+  height: 20px;
+  width: 86px;
+  float: right;
+}
+#hubWidget .hubpower .image span {
+  display: none;
 }
 #hubWidget {
   font-family: "Myriad Pro", Myriad, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Verdana, sans-serif;
@@ -53,6 +66,9 @@
   font-size: 20px;
   font-weight: bold;
 }
+#hubWidget ul {
+  list-style: none;
+}
 #hubWidget .headline {
   font-size: 15px;
 }
@@ -61,9 +77,19 @@
 }
 #hubWidget .pubdate {
   font-size: 13px;
-  color: #aaa;
   font-style: italic;
 }
-#hubWidget .hubpower {
-  text-align: right;
+#hubWidget .hubpower .link {
+  font-size: 13px;
+}
+#hubWidget .clearfix:before,
+#hubWidget .clearfix:after {
+  content: " ";
+  display: table;
+}
+#hubWidget .clearfix:after {
+  clear: both;
+}
+#hubWidget .clearfix {
+  *zoom: 1;
 }
