--- a/css/less/color-dark.less
+++ b/css/less/color-dark.less
@@ -1,30 +1,34 @@
 #hubWidget {
-	background: #222;
-	color: #fff;
+	background: #2b2b2b;
+	color: #eee;
 	.header {
-		border-bottom: 5px solid #fff;
+		border-bottom: 5px solid #eee;
 	}
 	.content {
 		&.loading {
-			min-height: 20px;
-			background: url("images/loading-dark.gif") top center no-repeat;
+			background: url("../images/loading-dark.gif") top center no-repeat;
 		}
 	}
 	a {
-		color: #fff;
+		color: #eee;
 		&:hover {
-			color: lighten(#5091cd, 20%);
+			color: lighten(@hopkins_blue, 20%);
 		}
 	}
 	.pubdate {
-		color: #fff;
+		color: #bbb;
 	}
 	.hubpower {
-		height: 20px;
-		width: 100%;
-		background: url("images/hubpower-dark.png") top right no-repeat;
-		span {
-			display: none;
+		.link {
+			a {
+				color: lighten(@hopkins_blue, 20%);
+				&:hover {
+					color: #aaa;
+				}
+			}
+		}
+		.image {
+			background: url("../images/hubpower-dark.png") top right no-repeat;
 		}
 	}
 }
