--- a/css/less/structure.less
+++ b/css/less/structure.less
@@ -1,19 +1,36 @@
 #hubWidget {
-	padding: 15px;
 	width: 250px;
+	padding: 15px;
 	.header {
 		padding-bottom: 10px;
 		margin-bottom: 10px;
 	}
+	.content {
+		&.loading {
+			min-height: 20px;
+		}
+	}
 	ul {
-		list-style: none;
 		padding: 0;
 		li {
 			margin-bottom: 10px;
 		}
 		p {
-			margin: 0;
 			padding: 0;
+			margin: 0;
+		}
+	}
+	.hubpower {
+		.link {
+			float: left;
+		}
+		.image {
+			height: 20px;
+			width: 86px;
+			float: right;
+			span {
+				display: none;
+			}
 		}
 	}
 }
