Changed image references to those hosted on the hub.

--- a/css/less/color-light.less
+++ b/css/less/color-light.less
@@ -6,7 +6,7 @@
 	}
 	.content {
 		&.loading {
-			background: url("../images/loading-light.gif") top center no-repeat;
+			background: url("http://hub.jhu.edu/assets/img/widget/loading-light.gif") top center no-repeat;
 		}
 	}
 	a {
@@ -28,7 +28,7 @@
 			}
 		}
 		.image {
-			background: url("../images/hubpower-light.png") top right no-repeat;
+			background: url("http://hub.jhu.edu/assets/img/widget/hubpower-light.png") top right no-repeat;
 		}
 	}
 }
