--- a/css/less/color-dark.less
+++ b/css/less/color-dark.less
@@ -6,7 +6,7 @@
 	}
 	.content {
 		&.loading {
-			background: url("../images/loading-dark.gif") top center no-repeat;
+			background: url("http://hub.jhu.edu/assets/img/widget/loading-dark.gif") top center no-repeat;
 		}
 	}
 	a {
@@ -28,7 +28,7 @@
 			}
 		}
 		.image {
-			background: url("../images/hubpower-dark.png") top right no-repeat;
+			background: url("http://hub.jhu.edu/assets/img/widget/hubpower-dark.png") top right no-repeat;
 		}
 	}
 }
