--- a/css/less/color-light.less
+++ b/css/less/color-light.less
@@ -3,7 +3,7 @@
 	.header {
 		border-bottom: 5px solid #000;
 	}
-	.content {
+	#hubWidgetContent {
 		&.loading {
 			background: url("http://hub.jhu.edu/assets/shared/img/loading-light.gif") top center no-repeat;
 		}
