--- a/src/assets/css/sass/type.scss
+++ b/src/assets/css/sass/type.scss
@@ -1,4 +1,4 @@
-#hubWidget {
+.hub-widget {
 	font-family: "Myriad Pro", Myriad, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Verdana, sans-serif;
 	line-height: 130%;
 	.header {
