--- a/src/assets/css/sass/structure.scss
+++ b/src/assets/css/sass/structure.scss
@@ -3,10 +3,8 @@
 		padding-bottom: 10px;
 		margin-bottom: 10px;
 	}
-	.hub-widgetContent {
-		&.loading {
-			min-height: 20px;
-		}
+	.loading {
+		min-height: 20px;
 	}
 	ul {
 		padding: 0;
