--- a/src/assets/css/sass/color_light.scss
+++ b/src/assets/css/sass/color_light.scss
@@ -4,7 +4,7 @@
 		border-bottom: 5px solid #000;
 	}
 	.loading {
-		background: url("http://hub.jhu.edu/assets/shared/img/loading-light.gif") top center no-repeat;
+		background: url("https://hub.jhu.edu/assets/shared/img/loading-light.gif") top center no-repeat;
 	}
 	a {
 		color: #000;
@@ -25,7 +25,7 @@
 			}
 		}
 		.image {
-			background: url("http://hub.jhu.edu/assets/shared/img/widget-hubpower-light.png") top right no-repeat;
+			background: url("https://hub.jhu.edu/assets/shared/img/widget-hubpower-light.png") top right no-repeat;
 		}
 	}
 }
