--- a/src/assets/css/sass/utility.scss
+++ b/src/assets/css/sass/utility.scss
@@ -3,10 +3,6 @@
 	    content: " ";
 	    display: table
 	}
-	.clearfix:after {
-	    clear: both;
-	}
-	.clearfix {
-	    *zoom: 1;
-	}
+	.clearfix:after { clear: both; }
+	.clearfix { *zoom: 1; }
 }
