--- a/src/assets/css/sass/structure.scss
+++ b/src/assets/css/sass/structure.scss
@@ -3,31 +3,30 @@
 		padding-bottom: 10px;
 		margin-bottom: 10px;
 	}
-	.loading {
-		min-height: 20px;
-	}
+
+	.loading { min-height: 20px; }
+
 	ul {
 		padding: 0;
 		margin: 0;
-		li {
-			margin-bottom: 10px;
-		}
+
+		li { margin-bottom: 10px; }
+
 		p {
 			padding: 0;
 			margin: 0;
 		}
 	}
+
 	.hubpower {
-		.link {
-			float: left;
-		}
+
+		.link { float: left; }
+
 		.image {
 			height: 20px;
 			width: 86px;
 			float: right;
-			span {
-				display: none;
-			}
+			span { display: none; }
 		}
 	}
 }
